OPS-001 Fix unit test add delete cascade to audit logs